2010-05-15  Sebastien Pouliot  <sebastien@ximian.com>

	* GuiRunner.cs: Adjust for IIgnoreList changes
	* Wizard.cs: Remove [ThreadModel] attribute from UpdateAssemblies
	since it can be called asynchronously

2010-05-08  Sebastien Pouliot  <sebastien@ximian.com>

	* GuiRunner.cs: Track the (non-fatal) warnings to be reported to 
	the user.
	* Wizard.cs: Catch FileNotFoundException when loading assemblies.
	This can occurs if .netmodules are used (and absent). Show this
	warning, if no fatal error occured, to the user at the end of the
	analysis. Do not let UpdateAssemblies be called (final check)
	while we're still loading them async

2010-04-26  Sebastien Pouliot  <sebastien@ximian.com>

	* Wizard.cs: Use Action instead of custom delegates (self-test)

2010-01-16  Sebastien Pouliot  <sebastien@ximian.com>

	* Wizard.Designer.cs: Update copyright notice up to 2010

2009-12-08  Sebastien Pouliot  <sebastien@ximian.com>

	* Wizard.cs: Don't throw/crash wizard if an unmanaged dll is
	added to the list of assemblies. At the moment the assembly is
	simply ignored.

2009-11-29  Sebastien Pouliot  <sebastien@ximian.com>

	* GuiRunner.cs: Add Execute method that will catch and report
	unexpected errors while anyalyzing the assembly set.
	* Wizard.cs: Call GuiRunner.Execute and adjust UI in case
	there are unexpected errors.
	* Wizard.Designer.cs: add new UI elements (autogenerated)

2009-07-09  Jesse Jones  <jesjones@mindspring.com>

	* Wizard.cs: Marked the async delegate code as threaded.

2009-03-19  Jesse Jones  <jesjones@mindspring.com>

	* Wizard.cs: Throws ObjectDisposedException.

2008-12-06  Sebastien Pouliot  <sebastien@ximian.com>

	* Wizard.resx, Resources/gendarme.ico: Update icon

2008-11-24  Sebastien Pouliot  <sebastien@ximian.com>

	* Wizard.Designer.cs: Adjust UI with new logo

2008-11-23  Sebastien Pouliot  <sebastien@ximian.com>

	* Resources/gendarme.png: Update with new logo.
	* gendarme.ico, Resources/gendarme.ico: Stop fighting with VS.NET