@@ -1,3 +1,7 @@
+2010-06-17  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* Wizard.cs: Apply AvoidRepetitiveCallsToPropertiesRule
+
 2010-05-15  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* GuiRunner.cs: Adjust for IIgnoreList changes
